overlays/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: registry.cloud.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              name: http
  tls:
  - hosts:
    - registry.cloud.localhost
    secretName: certificate-registry
